# robotics_wip

./: TestProject.sln  TestProject.uproject
Plugins/URoboSim/Source/URoboSim/: URoboSim.Build.cs
Plugins/URoboSim/Source/URoboSim/Private/: RRobot.cpp  RURDFParser.cpp
Source/: TestProject.Target.cs
Source/TestProject/: ABoxActor.cpp  ABoxActor.h  NetworkSynchronizerActor.cpp  NetworkSynchronizerActor.h  TestProject.Build.cs
Source/TestProject/net/: Deserializer.hpp  UdpClient.cpp  UdpClient.hpp
XML/robots/: bh280_standalone.urdf  bh282_standalone.urdf  herb.urdf  herb_simp.urdf  wam_bh280_standalone.urdf  wam_standalone.urdf
XML/robots/herb_description/: .gitignore  gen.sh
XML/robots/herb_description/meshes/base/: herb_neobotix_base_collision.fbx
XML/robots/herb_description/meshes/bh280/: finger1_0.fbx  finger1_2.fbx  finger2_2.fbx
XML/robots/herb_description/meshes/bh282/: hand_base.fbx
XML/robots/herb_description/meshes/wam/: wam3.fbx  wam4.fbx
XML/robots/herb_description/robots/: barretthand_macro.srdf  bh280.urdf  bh280_standalone.srdf  bh282.urdf  bh282_standalone.srdf  fixed_transforms.urdf  herb.srdf  herb_base.urdf  wam.urdf  wam_bh282_standalone.urdf
XML/robots/herb_description_/: package.xml
XML/robots/herb_description_/meshes/base/: herb_frame.fbx  herb_frame_collision.fbx
XML/robots/herb_description_/meshes/bh280/: finger0_0.fbx  finger0_1.fbx  finger0_2.fbx  finger1_1.fbx  finger2_1.fbx  hand_base.fbx
XML/robots/herb_description_/meshes/bh282/: perception_palm.fbx
dartTutorialCollisions/: CMakeLists.txt  main.cpp
(+10 files in other folders)
